WIP. ND2 deduplication and file hashes. Todo.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180422 Metadata inventory analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180422 Metadata inventory analysis.ipynb
@@ -264,9 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# TIFF date finding"
    ]
@@ -274,9 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tiff_files = (\n",
@@ -287,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tiff_files[0].path"
@@ -298,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "delta_t = timedelta(\n",
@@ -315,9 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(\n",
@@ -331,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\"Plane\"]"
@@ -342,9 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"]"
@@ -352,27 +338,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Summary"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "`@DeltaT` in TIFF OME metadata is actually in msec (spec says seconds), corresponds to `acquisition_times` in ND2. TIFF OME `AcquisitionDate` (expressed as ISO 8601 string, 1 sec resolution) corresponds to `dTimeAbsolute` in ND2. For this file, dTimeMSec seems to be the first entry in `acquisition_times`. This disagrees with what I find above!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Scratch work"
    ]
@@ -380,9 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nd2_files = File.select().where(File.type == \"nd2\").order_by(File.size.desc()).limit(40)"
@@ -391,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nd2_file = nd2_files[21]"
@@ -402,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeAbsolute\"]"
@@ -413,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nd2_file.metadata[\"acquisition_times\"][:100]"
@@ -424,9 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "jds = float(\n",
@@ -440,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pytz.UTC.localize(\n",
@@ -457,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.array(nd2_file.metadata[\"acquisition_times\"]) / (1000 * 60 * 60 * 24)"
@@ -468,9 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "jds"
@@ -479,9 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pytz.UTC.localize(jdutil.jd_to_datetime(jds[53])).astimezone(nyc)"
@@ -490,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pytz.UTC.localize(jdutil.jd_to_datetime(jds2[53])).astimezone(nyc)"
@@ -501,9 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pytz.UTC.localize(\n",
@@ -518,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pytz.UTC.localize(\n",
@@ -535,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "timedelta(milliseconds=nd2_file.metadata[\"acquisition_times\"][-1])"
@@ -546,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "acquisition_time = pytz.UTC.localize(\n",
@@ -563,9 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "atol = 0.1\n",
@@ -652,24 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tiff_acquisition_date(metadata):\n",
-    "    if \"image_metadata_sequence\" in metadata:\n",
-    "        acquisition_date = metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
-    "            \"dTimeAbsolute\"\n",
-    "        ]\n",
-    "    elif \"image_description\" in metadata:\n",
-    "        acquisition_date = pendulum.parse(\n",
-    "            metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"], tz=\"local\"\n",
-    "        ).in_timezone(\"utc\")\n",
-    "    else:\n",
-    "        raise Exception(\n",
-    "            \"need image_metadata_sequence or image_description, instead found: {}\".format(\n",
-    "                metadata.keys()\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "def evaluate_tiff_nd2_correspondence(nd2_file, tiff_file):\n",
+    "def evaluate_tiff_nd2_correspondence2(nd2_file, tiff_file):\n",
     "    if \"image_metadata_sequence\" not in tiff_file.metadata:\n",
     "        print(\n",
     "            \"no TIFF image_metadata_sequence, found instead: {}\".format(\n",
@@ -759,6 +692,64 @@
     "        print(\"NO TIME DELTA\")\n",
     "\n",
     "\n",
+    "def get_tiff_acquisition_date(metadata):\n",
+    "    if \"image_metadata_sequence\" in metadata:\n",
+    "        dtimeabsolute_jd = metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "        return pendulum.instance(jdutil.jd_to_datetime(dtimeabsolute_jd), tz=\"utc\")\n",
+    "    elif \"image_description\" in metadata:\n",
+    "        return pendulum.parse(\n",
+    "            metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"], tz=\"local\"\n",
+    "        ).in_timezone(\"utc\")\n",
+    "    else:\n",
+    "        raise Exception(\n",
+    "            \"need image_metadata_sequence or image_description, instead found: {}\".format(\n",
+    "                metadata.keys()\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "def get_nd2_acquisition_date(metadata):\n",
+    "    dtimeabsolute_jd = jmespath.search(\n",
+    "        \"image_metadata_sequence.SLxPictureMetadata.dTimeAbsolute\", metadata\n",
+    "    )\n",
+    "    if dtimeabsolute_jd == -1:\n",
+    "        print(\"!!! dtimeabsolute_jd = -1\")\n",
+    "        dtimeabsolute_jd = None\n",
+    "    dtimeabsolute_jd2 = jmespath.search(\n",
+    "        'acquisition_time.variant.no_name.\"@value\"', metadata\n",
+    "    )\n",
+    "    if dtimeabsolute_jd2 is not None:\n",
+    "        dtimeabsolute_jd2 = float(dtimeabsolute_jd2)\n",
+    "        if dtimeabsolute_jd2 == -1:\n",
+    "            print(\"!!! dtimeabsolute_jd2 = -1\")\n",
+    "            dtimeabsolute_jd2 = None\n",
+    "    if dtimeabsolute_jd is None and dtimeabsolute_jd2 is None:\n",
+    "        # print(metadata['image_metadata_sequence'])\n",
+    "        # raise Exception('need image_metadata_sequence or acquisition_time, instead found: {}'.format(metadata.keys()))\n",
+    "        print(\"!!! NO GOOD ND2 DATE\")\n",
+    "        return\n",
+    "    if (\n",
+    "        dtimeabsolute_jd is not None\n",
+    "        and dtimeabsolute_jd2 is not None\n",
+    "        and dtimeabsolute_jd != dtimeabsolute_jd2\n",
+    "    ):\n",
+    "        print(\n",
+    "            \"!!! ND2 acquisition_date mismatch: {} (image_metadata_sequence) vs. {} (acquisition_time)\".format(\n",
+    "                dtimeabsolute_jd, dtimeabsolute_jd2\n",
+    "            )\n",
+    "        )\n",
+    "        # raise Exception('ND2 acquisition_date mismatch: {} (image_metadata_sequence) vs. {} (acquisition_time)'.format(dtimeabsolute_jd, dtimeabsolute_jd2))\n",
+    "    return pendulum.instance(jdutil.jd_to_datetime(dtimeabsolute_jd), tz=\"utc\")\n",
+    "\n",
+    "\n",
+    "def evaluate_tiff_nd2_correspondence(nd2_file, tiff_file):\n",
+    "    tiff_acqdate = get_tiff_acquisition_date(tiff_file.metadata)\n",
+    "    nd2_acqdate = get_nd2_acquisition_date(nd2_file.metadata)\n",
+    "    print(\"###\", tiff_acqdate, nd2_acqdate)\n",
+    "\n",
+    "\n",
     "path_sep = \"/\"\n",
     "for tiff_file in (\n",
     "    File.select().where(File.type == \"tiff\").order_by(File.size.desc()).limit(9)\n",
@@ -793,6 +784,42 @@
     "    else:\n",
     "        print(\"did not find nd2 for {}\".format(tiff_file.path))\n",
     "    print(\"**********\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jmespath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_tiff_nd2[0].metadata[\"acquisition_time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jmespath.search('acquisition_time.variant.no_name.\"@value\"', bad_tiff_nd2[0].metadata)"
    ]
   },
   {
@@ -1045,6 +1072,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bad_tiff_nd2[5].metadata.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_tiff_nd2[5].metadata[\"image_metadata_sequence\"][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bad_tiffs[5].metadata[\"image_metadata_sequence\"]"
    ]
   },
@@ -1053,6 +1098,41 @@
    "metadata": {},
    "source": [
     "# ND2 duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hashes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hash_file(filename, size=None, num_chunks=10, chunk_size=1e5):\n",
+    "    if size is None:\n",
+    "        size = os.path.getsize(filename)\n",
+    "    total = hhh\n",
+    "    with open(filename, \"rb\") as f:\n",
+    "        if size < sample_threshhold or sample_size < 1:\n",
+    "            data = f.read()\n",
+    "        else:\n",
+    "            data = f.read(sample_size)\n",
+    "            f.seek(size // 2)\n",
+    "            data += f.read(sample_size)\n",
+    "            f.seek(-sample_size, os.SEEK_END)\n",
+    "            data += f.read(sample_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dups"
    ]
   },
   {
@@ -1084,15 +1164,6 @@
    "outputs": [],
    "source": [
     "sizes = np.array([f.size for f in File.select(File.size).where(File.type == \"nd2\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique(sizes)"
    ]
   },
   {
