Can make multiple snakes on a chip and specify how to split up the lanes.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180501 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180501 Prototyping.ipynb
@@ -69,6 +69,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fov = 6.5 * 2048 / 40\n",
+    "fov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "23e3 * 13e3 / fov**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Cell = partial(gdspy.Cell, exclude_from_current=True)"
    ]
   },
@@ -79,6 +98,28 @@
    "outputs": [],
    "source": [
     "lib = gdspy.GdsLibrary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells, metadata = snake(\n",
+    "    chip_dims,\n",
+    "    split=5,\n",
+    "    margin=1.5e3,\n",
+    "    trench_spacing=2,\n",
+    "    feeding_channel_width=90,\n",
+    "    lane_gap=20,\n",
+    ")\n",
+    "snake_cell = cells[0]\n",
+    "chip_cell = Cell(\"Chip\")\n",
+    "chip_cell.add(outline(chip_dims))\n",
+    "chip_cell.add(g.CellReference(snake_cell, (0, 0)))\n",
+    "plot_cell(chip_cell)\n",
+    "print(metadata)"
    ]
   },
   {
