Implemented wafer, profilometry marks, alignment crosses. Using memoization to cache identical cells.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180501 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180501 Prototyping.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import snakenmake\n",
     "from snakenmake import *"
    ]
   },
@@ -36,21 +37,11 @@
     "    poly_dict = cell.get_polygons(by_spec=True)\n",
     "    plt.figure(figsize=(20, 12))\n",
     "    for layer_datatype, polys in poly_dict.items():\n",
-    "        if layer_datatype[0] == 2:\n",
-    "            continue\n",
+    "        # if layer_datatype[0] == 2:\n",
+    "        #    continue\n",
     "        for poly in polys:\n",
     "            plt.fill(*poly.T, lw=0.5, ec=\"r\", fc=\"none\")\n",
     "    plt.axes().set_aspect(\"equal\", \"datalim\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRENCH_LAYER = 2\n",
-    "FEEDING_CHANNEL_LAYER = 6"
    ]
   },
   {
@@ -98,6 +89,47 @@
    "outputs": [],
    "source": [
     "lib = gdspy.GdsLibrary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snakenmake import *\n",
+    "\n",
+    "# plot_cell(profilometry_marks())\n",
+    "# plot_cell(alignment_cross())\n",
+    "plot_cell(wafer([chip(\"foo\", snake)] * 6, \"This is a \\n label\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snakenmake import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chip_cell = chip(\n",
+    "    \"foo\",\n",
+    "    snake,\n",
+    "    dims=chip_dims,\n",
+    "    split=5,\n",
+    "    margin=1.5e3,\n",
+    "    trench_spacing=2,\n",
+    "    feeding_channel_width=90,\n",
+    "    lane_gap=20,\n",
+    ")\n",
+    "plot_cell(chip_cell)"
    ]
   },
   {
