Implemented hack to generate unique cell names, either using get_uuid or chip name as a suffix.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180508 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180508 Prototyping.ipynb
@@ -104,6 +104,7 @@
    "source": [
     "from snakenmake import *\n",
     "\n",
+    "metadata = {}\n",
     "main_cell = wafer(\n",
     "    [\n",
     "        chip(\n",
@@ -113,6 +114,7 @@
     "            feeding_channel_width=fc,\n",
     "            trench_spacing=ts,\n",
     "            draw_trenches=True,\n",
+    "            metadata=metadata,\n",
     "        )\n",
     "        for fc in (90, 65)\n",
     "        for ts in (1, 1.5, 2)\n",
@@ -120,6 +122,44 @@
     "    \"Big Snakes \\n BS/JQS 180508\",\n",
     ")\n",
     "write_gds(main_cell, \"bigsnakes2.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snakenmake import *\n",
+    "\n",
+    "metadata = {}\n",
+    "main_cell = wafer(\n",
+    "    [\n",
+    "        chip(\n",
+    "            \"Big Snake S3 FC{fc} L35 W1.5 TS{ts} LG20\".format(fc=fc, ts=ts),\n",
+    "            snake,\n",
+    "            split=3,\n",
+    "            feeding_channel_width=fc,\n",
+    "            trench_spacing=ts,\n",
+    "            draw_trenches=True,\n",
+    "            tick_labels=False,\n",
+    "            metadata=metadata,\n",
+    "        )\n",
+    "        for fc in (90,)\n",
+    "        for ts in (1, 1.5, 2)\n",
+    "    ],\n",
+    "    \"Big Snakes Backup \\n BS/JQS 180508\",\n",
+    ")\n",
+    "write_gds(main_cell, \"bigsnakes2backup.gds\")"
    ]
   },
   {
