WIP text rendering works, need to clean up.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180509 Font testing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180509 Font testing.ipynb
@@ -303,6 +303,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "face = freetype.Face(\"Vera.ttf\")\n",
+    "face.set_char_size(48 * 64)\n",
+    "face.load_char(\"s\")\n",
+    "slot = face.glyph\n",
+    "outline = slot.outline\n",
+    "contours = np.array(outline.contours)\n",
+    "polygons = []\n",
+    "for start, end in zip(np.concatenate(((0,), contours[:-1] + 1)), contours):\n",
+    "    points = outline.points[start : end + 1]\n",
+    "    tags = outline.tags[start : end + 1]\n",
+    "    # SEE: https://www.freetype.org/freetype2/docs/glyphs/glyphs-6.html\n",
+    "    segments = []\n",
+    "    for j in range(len(points)):  # range(1, len(points)-1):\n",
+    "        if (\n",
+    "            tags[j] & freetype.FT_CURVE_TAG_CONIC\n",
+    "            and j > 1\n",
+    "            and tags[j - 1] & freetype.FT_CURVE_TAG_CONIC\n",
+    "        ):\n",
+    "            # create virtual on point at midpoint of points[j-1] and points[j]\n",
+    "            midpoint = (points[j - 1] + points[j]) / 2\n",
+    "            segments[-1].append(midpoint)\n",
+    "            segments.append([midpoint, points[j]])\n",
+    "        else:\n",
+    "            if j == 0 and tags[0] & freetype.FT_CURVE_TAG_CONIC:\n",
+    "                # first point is off point, so segment should start at last point in contour\n",
+    "                if tags[-1] & freetype.FT_CURVE_TAG_CONIC:\n",
+    "                    # last point is also off point, so segment should start and end with\n",
+    "                    # midpoint of first and last points\n",
+    "                    midpoint = (points[0] + points[-1]) / 2\n",
+    "                    segments.append([midpoint, points[0]])\n",
+    "                else:\n",
+    "                    segments.append([points[-1], points[0]])\n",
+    "            if j != 0:\n",
+    "                segments[-1].append(points[j])\n",
+    "            if tags[j] & freetype.FT_CURVE_TAG_ON:\n",
+    "                segments.append([points[j]])\n",
+    "    if tags[0] & freetype.FT_CURVE_TAG_CONIC and tags[-1] & freetype.FT_CURVE_TAG_CONIC:\n",
+    "        # first and last points are off points, so last on point is midpoint of first and last points\n",
+    "        midpoint = (points[0] + points[-1]) / 2\n",
+    "        segments[-1].append[midpoint]\n",
+    "    else:\n",
+    "        # close last segment with first point\n",
+    "        segments[-1].append(points[0])\n",
+    "    polygon_segments = []\n",
+    "    for segment in segments:\n",
+    "        if len(segment) == 2:\n",
+    "            # plt.plot(*np.array(segment).T)\n",
+    "            polygon_segments.append((segment[0],))\n",
+    "        elif len(segment) == 3 or len(segment) == 4:\n",
+    "            # plt.plot(*text.bezier(np.array(segment), np.linspace(0, 1, 100)).T)\n",
+    "            polygon_segments.append(\n",
+    "                text.bezier(np.array(segment), np.linspace(0, 1, 100))[:-1]\n",
+    "            )\n",
+    "        else:\n",
+    "            raise ValueError(\n",
+    "                \"unexpected number of points per segment {}\".format(len(segment))\n",
+    "            )\n",
+    "    polygon = np.concatenate(polygon_segments)\n",
+    "    polygons.append(polygon)\n",
+    "for polygon in polygons:\n",
+    "    plt.plot(*polygon.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.concatenate(((0,), contours[:-1]))"
    ]
   },
@@ -321,6 +390,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
