Fixed intermittent text spacing error, for some reason repeated calls to load_char on the space character sometimes gave the scaled and sometimes the unscaled metrics, now we call it once at the beginning to get the space horiAdvance and use that value for the rest of text rendering. Unclear if this breaks if we render text multiple times.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
@@ -81,118 +81,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Text testing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text.DEFAULT_FACE.max_advance_height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text.DEFAULT_FACE.size.height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text.DEFAULT_FACE.descender"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    text.DEFAULT_FACE.ascender - text.DEFAULT_FACE.descender\n",
-    ")  # + text.DEFAULT_FACE.max_advance_height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# main_cell = wafer([chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=True)]*3, \"Big snakes\\n180503\")\n",
-    "# main_cell = chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)\n",
-    "# main_cell = Text2('testing', 600, position=(0,0))\n",
-    "def character(char, size, face=text.DEFAULT_FACE, points_per_segment=10):\n",
-    "    cell = Cell(\"~{}\".format(char))\n",
-    "    polygons, metadata = text.render_character(\n",
-    "        char, size, face=face, points_per_segment=points_per_segment\n",
-    "    )\n",
-    "    cell.add(g.PolygonSet(polygons))\n",
-    "    return cell, metadata\n",
+    "import text\n",
     "\n",
+    "a = [text.render_character(\"j\", 600) for i in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import snakenmake\n",
+    "from snakenmake import *\n",
     "\n",
-    "def Text2(\n",
-    "    text,\n",
-    "    size,\n",
-    "    position=(0, 0),\n",
-    "    horizontal=True,\n",
-    "    angle=0,\n",
-    "    x_reflection=False,\n",
-    "    layer=0,\n",
-    "    datatype=0,\n",
-    "    face=text.DEFAULT_FACE,\n",
-    "    points_per_segment=10,\n",
-    "):\n",
-    "    if not horizontal or angle != 0:\n",
-    "        raise NotImplementedError\n",
-    "    position = np.array(position)\n",
-    "    offset = np.zeros(2)\n",
-    "    face.set_char_size(size * 64)\n",
-    "    linespace = face.size.height / 64\n",
-    "    cells = []\n",
-    "    for char in text:\n",
-    "        if char == \"\\n\":\n",
-    "            offset[0] = 0\n",
-    "            offset[1] -= linespace\n",
-    "            continue\n",
-    "        elif char == \" \":\n",
-    "            face.load_char(char)\n",
-    "            offset[0] += face.glyph.metrics.horiAdvance\n",
-    "            continue\n",
-    "        char_cell, metadata = character(\n",
-    "            char, size, face=face, points_per_segment=points_per_segment\n",
-    "        )\n",
-    "        cells.append(g.CellReference(char_cell, position + offset))\n",
-    "        offset[0] += metadata[\"horiAdvance\"]\n",
-    "    return cells\n",
-    "\n",
-    "\n",
-    "# main_cell, md = character_cell('s', 100*64)\n",
-    "main_cell = Cell(\"main\")\n",
-    "cells = Text2(\"this is a\\ntest  foo u\", 600, position=(0, 0))\n",
-    "main_cell.add(cells)\n",
-    "print(md)\n",
+    "# main_cell = wafer([chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)]*3, \"Big snakes\\n180503\")\n",
+    "main_cell = chip(\n",
+    "    \"Big Snake S3 FC90 L35 W1.5 LG20 TS2\", snake, split=3, draw_trenches=False\n",
+    ")\n",
     "plot_cell(main_cell)"
    ]
   },
