WIP revamped font rendering. Chasing down bug where interiors of closed polygons, like the figure 8 or letter B, are not subtracted out.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "import text\n",
     "\n",
-    "a = [text.render_character(\"j\", 600) for i in range(5)]"
+    "a = text.Text(\"foo\", 200)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a[0]"
+    "b = a[0]"
    ]
   },
   {
@@ -106,7 +106,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a[1]"
+    "b.get_polygons()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import snakenmake\n",
+    "from snakenmake import *\n",
+    "from text import Text as _Text\n",
+    "\n",
+    "\n",
+    "def Text2(text, size, position=(0, 0), alignment=\"left\", angle=0, **kwargs):\n",
+    "    objs = _Text(text, size, position=(0, 0), **kwargs)\n",
+    "    objs = mirror_refs(objs)\n",
+    "    if angle == 0:\n",
+    "        pass\n",
+    "    elif angle == -np.pi / 2:\n",
+    "        for ref in objs:\n",
+    "            ref.rotation += 90\n",
+    "            ref.origin[:] = ref.origin[::-1]\n",
+    "    elif angle == np.pi / 2:\n",
+    "        for ref in objs:\n",
+    "            ref.rotation -= 90\n",
+    "            ref.origin[:] = ref.origin[::-1] * np.array([1, -1])\n",
+    "    else:\n",
+    "        raise NotImplementedError\n",
+    "    objs = align_refs(objs, position=position, alignment=alignment)\n",
+    "    return objs\n",
+    "\n",
+    "\n",
+    "main_cell = Cell(\"main\")\n",
+    "# main_cell.add(Text2(\"foo bar\\nbaz taz\", 100, position=(5e3,-3e3), angle=np.pi/2, alignment='centered'))\n",
+    "main_cell.add(\n",
+    "    Text2(\n",
+    "        \"8Bfoio bar\\nbaz taz\",\n",
+    "        100,\n",
+    "        position=(5e3, -3e3),\n",
+    "        angle=np.pi / 2,\n",
+    "        alignment=\"centered\",\n",
+    "        layer=6,\n",
+    "    )\n",
+    ")\n",
+    "# main_cell.add(Text2(\"foo bar\\nbaz taz\", 100, position=(5e3,-3e3), angle=np.pi/2, alignment='centered', layer=6))\n",
+    "# main_cell.add(Text2(\"Big snakes\\n180503\", 1e4, position=(3e4,0), angle=np.pi/2, alignment='centered', layer=6))\n",
+    "plot_cell(main_cell)"
    ]
   },
   {
@@ -118,18 +165,13 @@
     "import snakenmake\n",
     "from snakenmake import *\n",
     "\n",
-    "# main_cell = wafer([chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)]*3, \"Big snakes\\n180503\")\n",
-    "main_cell = chip(\n",
-    "    \"Big Snake S3 FC90 L35 W1.5 LG20 TS2\", snake, split=3, draw_trenches=False\n",
+    "main_cell = wafer(\n",
+    "    [chip(\"Big Snake S3 FC90 L35 W1.5 LG20 TS2\", snake, split=3, draw_trenches=False)]\n",
+    "    * 6,\n",
+    "    \"Big snakes\\n180503\",\n",
     ")\n",
+    "# main_cell = chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)\n",
     "plot_cell(main_cell)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
    ]
   },
   {
@@ -138,14 +180,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snakenmake import *\n",
-    "\n",
-    "main_cell = wafer(\n",
-    "    [chip(\"Big Snake S3 FC90 L35 W1.5 LG20 TS2\", snake, split=3, draw_trenches=True)]\n",
-    "    * 3,\n",
-    "    \"Big snakes\\n180503\",\n",
-    ")\n",
-    "write_gds(main_cell, \"bigsnakes2.gds\")"
+    "import freetype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text.DEFAULT_FACE.set_char_size?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freetype.FT_LOAD_NO_SCALE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g.CellReference?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old"
    ]
   },
   {
@@ -171,9 +240,9 @@
     "        for fc in (90, 65)\n",
     "        for ts in (1, 1.5, 2)\n",
     "    ],\n",
-    "    \"Big Snakes \\n BS/JQS 180508\",\n",
+    "    \"Big Snakes \\n BS/JQS 180510\",\n",
     ")\n",
-    "write_gds(main_cell, \"bigsnakes2.gds\")"
+    "write_gds(main_cell, \"bigsnakes3.gds\")"
    ]
   },
   {
@@ -211,7 +280,7 @@
     "    ],\n",
     "    \"Big Snakes Backup \\n BS/JQS 180508\",\n",
     ")\n",
-    "write_gds(main_cell, \"bigsnakes2backup.gds\")"
+    "write_gds(main_cell, \"bigsnakes3backup.gds\")"
    ]
   },
   {
