--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180510 Prototyping.ipynb
@@ -40,7 +40,7 @@
     "        if layer_datatype[0] in exclude:\n",
     "            continue\n",
     "        for poly in polys:\n",
-    "            plt.fill(*poly.T, lw=0.5, ec=\"r\", fc=\"none\")\n",
+    "            plt.fill(*poly.T, lw=0.5, ec=\"k\", fc=(1, 0, 0, 0.5))\n",
     "    plt.axes().set_aspect(\"equal\", \"datalim\")\n",
     "\n",
     "\n",
@@ -81,14 +81,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import text\n",
-    "\n",
-    "a = text.Text(\"foo\", 200)"
+    "# Text testing"
    ]
   },
   {
@@ -97,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = a[0]"
+    "import text"
    ]
   },
   {
@@ -106,7 +102,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.get_polygons()"
+    "polygons, metrics = text.render_character(\"8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = polygons[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.spatial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dists = scipy.spatial.distance.cdist(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unravel_index(dists.argmin(), dists.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(*a.T, c=\"r\")\n",
+    "plt.scatter(*b.T, c=\"g\")\n",
+    "plt.scatter(*a[3], c=\"b\")\n",
+    "plt.scatter(*b[0], c=\"b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined = np.concatenate((a[:4], b[0:], (b[0],), a[3:]))\n",
+    "plt.plot(*combined.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
    ]
   },
   {
@@ -117,60 +205,12 @@
    "source": [
     "import snakenmake\n",
     "from snakenmake import *\n",
-    "from text import Text as _Text\n",
     "\n",
-    "\n",
-    "def Text2(text, size, position=(0, 0), alignment=\"left\", angle=0, **kwargs):\n",
-    "    objs = _Text(text, size, position=(0, 0), **kwargs)\n",
-    "    objs = mirror_refs(objs)\n",
-    "    if angle == 0:\n",
-    "        pass\n",
-    "    elif angle == -np.pi / 2:\n",
-    "        for ref in objs:\n",
-    "            ref.rotation += 90\n",
-    "            ref.origin[:] = ref.origin[::-1]\n",
-    "    elif angle == np.pi / 2:\n",
-    "        for ref in objs:\n",
-    "            ref.rotation -= 90\n",
-    "            ref.origin[:] = ref.origin[::-1] * np.array([1, -1])\n",
-    "    else:\n",
-    "        raise NotImplementedError\n",
-    "    objs = align_refs(objs, position=position, alignment=alignment)\n",
-    "    return objs\n",
-    "\n",
-    "\n",
-    "main_cell = Cell(\"main\")\n",
-    "# main_cell.add(Text2(\"foo bar\\nbaz taz\", 100, position=(5e3,-3e3), angle=np.pi/2, alignment='centered'))\n",
-    "main_cell.add(\n",
-    "    Text2(\n",
-    "        \"8Bfoio bar\\nbaz taz\",\n",
-    "        100,\n",
-    "        position=(5e3, -3e3),\n",
-    "        angle=np.pi / 2,\n",
-    "        alignment=\"centered\",\n",
-    "        layer=6,\n",
-    "    )\n",
-    ")\n",
-    "# main_cell.add(Text2(\"foo bar\\nbaz taz\", 100, position=(5e3,-3e3), angle=np.pi/2, alignment='centered', layer=6))\n",
-    "# main_cell.add(Text2(\"Big snakes\\n180503\", 1e4, position=(3e4,0), angle=np.pi/2, alignment='centered', layer=6))\n",
-    "plot_cell(main_cell)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import snakenmake\n",
-    "from snakenmake import *\n",
-    "\n",
-    "main_cell = wafer(\n",
-    "    [chip(\"Big Snake S3 FC90 L35 W1.5 LG20 TS2\", snake, split=3, draw_trenches=False)]\n",
-    "    * 6,\n",
-    "    \"Big snakes\\n180503\",\n",
-    ")\n",
+    "# main_cell = wafer([chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)]*6, \"Big snakes\\n180503\")\n",
     "# main_cell = chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)\n",
+    "main_cell = Cell(\"main\")\n",
+    "main_cell.add(Text(\"foo\\n8Bbgopq\", 100))\n",
+    "# main_cell.add(Text(\"8\", 100))\n",
     "plot_cell(main_cell)"
    ]
   },
@@ -214,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Old"
+    "# Designs"
    ]
   },
   {
