--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180513 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180513 Prototyping.ipynb
@@ -209,7 +209,7 @@
     "# main_cell = wafer([chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)]*6, \"Big snakes\\n180503\")\n",
     "# main_cell = chip('Big Snake S3 FC90 L35 W1.5 LG20 TS2', snake, split=3, draw_trenches=False)\n",
     "main_cell = Cell(\"main\")\n",
-    "main_cell.add(Text(\"foo\\n8Bbgopq\", 100))\n",
+    "main_cell.add(Text(\"foo_ij\\n8Bbgopq\", 100))\n",
     "# main_cell.add(Text(\"8\", 100))\n",
     "plot_cell(main_cell)"
    ]
@@ -263,24 +263,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "from snakenmake import *\n",
     "\n",
     "metadata = {}\n",
     "main_cell = wafer(\n",
     "    [\n",
     "        chip(\n",
-    "            \"Big Snake S3 FC{fc} L35 W1.5 TS{ts} LG20\".format(fc=fc, ts=ts),\n",
+    "            \"Big Snake S3 FC{fc} L35 W1.5 TS{ts} LG{lg}\".format(fc=fc, ts=ts, lg=lg),\n",
     "            snake,\n",
     "            split=3,\n",
     "            feeding_channel_width=fc,\n",
     "            trench_spacing=ts,\n",
+    "            lane_gap=lg,\n",
     "            draw_trenches=True,\n",
     "            metadata=metadata,\n",
     "        )\n",
-    "        for fc in (90, 65)\n",
+    "        for (fc, lg) in zip((90, 45), (20, 17))\n",
     "        for ts in (1, 1.5, 2)\n",
     "    ],\n",
-    "    \"Big Snakes \\n BS/JQS 180510\",\n",
+    "    \"Big Snakes \\n BS/JQS 180513\",\n",
     ")\n",
     "write_gds(main_cell, \"bigsnakes3.gds\")"
    ]
@@ -300,6 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "from snakenmake import *\n",
     "\n",
     "metadata = {}\n",
@@ -318,7 +321,7 @@
     "        for fc in (90,)\n",
     "        for ts in (1, 1.5, 2)\n",
     "    ],\n",
-    "    \"Big Snakes Backup \\n BS/JQS 180508\",\n",
+    "    \"Big Snakes Backup \\n BS/JQS 180513\",\n",
     ")\n",
     "write_gds(main_cell, \"bigsnakes3backup.gds\")"
    ]
